# zerotoprod

./: Cargo.toml  compose.yaml  configuration.yaml  init_db.sh
.github/workflows/: general.yaml  general.yml
migrations/: 20240225194524_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscribe.rs  subscriptions.rs
tests/: health_check.rs
